--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/pretendard/dist/web/static/pretendard.css" as="style" crossorigin />
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="@/main.tsx"></script>
     <title>Document</title>
   </head>
   <body>
